- Make sure tokens that expired are considered invalid

CSRF Helper 1.0.0-rc1
----------------------
Released on 2018-10-23

- Initial release.